--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,67 +24,81 @@ jobs:
         run: |
           cd android
           
-          echo "=== 开始实施动态上下文重定向（安全幂等版本） ==="
+          echo "=== 开始实施动态上下文重定向（企业级自验证补丁模式） ==="
           set -e
 
           TARGET_DIR="../node_modules/react-native-track-player/android/src/main"
 
           if [ ! -d "$TARGET_DIR" ]; then
-            echo "警告：未找到路径 $TARGET_DIR，请核对依赖安装状态。"
+            echo "❌ 未找到路径 $TARGET_DIR，请核对依赖安装状态。"
             exit 1
           fi
 
           echo "扫描目标目录: $TARGET_DIR"
 
-          # 只扫描 Java 和 Kotlin 源文件
-          grep -rlE --include="*.java" --include="*.kt" \
+          PATCH_COUNT=0
+          FILE_COUNT=0
+
+          # 找到可能包含目标调用的源码文件
+          MATCH_FILES=$(grep -rlE --include="*.java" --include="*.kt" \
             "(^|[^A-Za-z0-9_])getCacheDir\(\)|(^|[^A-Za-z0-9_])getFilesDir\(\)|\.cacheDir|\.filesDir" \
-            "$TARGET_DIR" | while IFS= read -r FILE; do
+            "$TARGET_DIR" || true)
 
-            echo "处理文件: $FILE"
+          if [ -z "$MATCH_FILES" ]; then
+            echo "未检测到需要处理的缓存目录调用，跳过补丁。"
+          else
+            while IFS= read -r FILE; do
 
-            # -------------------------
-            # 1️⃣ Java 方法调用替换（仅替换未被 applicationContext 包裹的调用）
-            # -------------------------
+              # 创建备份用于 diff 对比
+              cp "$FILE" "$FILE.bak"
 
-            # context.getCacheDir() → context.getApplicationContext().getCacheDir()
-            sed -i -E '
-              s/([A-Za-z0-9_]+)\.getCacheDir\(\)/\1.getApplicationContext().getCacheDir()/g
-            ' "$FILE"
+              # 仅当未包含 applicationContext 时才替换
+              sed -i -E '
+                s/([A-Za-z0-9_]+)\.getCacheDir\(\)/\1.getApplicationContext().getCacheDir()/g
+              ' "$FILE"
 
-            sed -i -E '
-              s/([A-Za-z0-9_]+)\.getFilesDir\(\)/\1.getApplicationContext().getFilesDir()/g
-            ' "$FILE"
+              sed -i -E '
+                s/([A-Za-z0-9_]+)\.getFilesDir\(\)/\1.getApplicationContext().getFilesDir()/g
+              ' "$FILE"
 
-            # -------------------------
-            # 2️⃣ Kotlin 属性调用替换（仅当未包含 applicationContext 时）
-            # -------------------------
+              sed -i -E '
+                s/([A-Za-z0-9_]+)\.cacheDir/\1.applicationContext.cacheDir/g
+              ' "$FILE"
 
-            # context.cacheDir → context.applicationContext.cacheDir
-            sed -i -E '
-              s/([A-Za-z0-9_]+)\.cacheDir/\1.applicationContext.cacheDir/g
-            ' "$FILE"
+              sed -i -E '
+                s/([A-Za-z0-9_]+)\.filesDir/\1.applicationContext.filesDir/g
+              ' "$FILE"
 
-            sed -i -E '
-              s/([A-Za-z0-9_]+)\.filesDir/\1.applicationContext.filesDir/g
-            ' "$FILE"
+              # 折叠多层
+              while grep -q "getApplicationContext()\.getApplicationContext()" "$FILE"; do
+                sed -i 's/getApplicationContext()\.getApplicationContext()/getApplicationContext()/g' "$FILE"
+              done
 
-            # -------------------------
-            # 3️⃣ 幂等折叠（多层清理，直到收敛）
-            # -------------------------
+              while grep -q "\.applicationContext\.applicationContext" "$FILE"; do
+                sed -i 's/\.applicationContext\.applicationContext/.applicationContext/g' "$FILE"
+              done
 
-            # 连续折叠直到无变化
-            while grep -q "getApplicationContext()\.getApplicationContext()" "$FILE"; do
-              sed -i 's/getApplicationContext()\.getApplicationContext()/getApplicationContext()/g' "$FILE"
-            done
+              # 对比是否真的发生修改
+              if ! diff -q "$FILE.bak" "$FILE" >/dev/null; then
+                echo "--------------------------------------------------"
+                echo "已修改文件: $FILE"
+                diff -u "$FILE.bak" "$FILE" || true
+                echo "--------------------------------------------------"
 
-            while grep -q "\.applicationContext\.applicationContext" "$FILE"; do
-              sed -i 's/\.applicationContext\.applicationContext/.applicationContext/g' "$FILE"
-            done
+                PATCH_COUNT=$((PATCH_COUNT+1))
+                FILE_COUNT=$((FILE_COUNT+1))
+              fi
 
-          done
+              rm "$FILE.bak"
 
-          echo "动态上下文重定向注入完成（安全版本）。"
+            done <<< "$MATCH_FILES"
+          fi
+
+          echo "=============================================="
+          echo "补丁执行完成"
+          echo "修改文件数量: $FILE_COUNT"
+          echo "总修改次数(文件级): $PATCH_COUNT"
+          echo "=============================================="
 
           ./gradlew assembleRelease -PMYAPP_UPLOAD_STORE_FILE='debug.keystore' -PMYAPP_UPLOAD_KEY_ALIAS='androiddebugkey' -PMYAPP_UPLOAD_STORE_PASSWORD='android' -PMYAPP_UPLOAD_KEY_PASSWORD='android'
 
